update title slide

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+				<section>Neurophonetics\nVijay Solanki\nWeek 10\nThurs 16th March 2017</section>
 				<section>Slide 2</section>
 				<section>Slide 3</section>
 				<section>Slide 4</section>
