--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta name="author" content="Vijay Solanki">
 
 		<title>Neurophonetics</title>
 
@@ -24,7 +25,11 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Neurophonetics\nVijay Solanki\nWeek 10\nThurs 16th March 2017</section>
+				<section>Neurophonetics\nVijay Solanki\nWeek 10\nThurs 16th March 2017
+					<aside class = "notes">
+					 I am your notes!
+					</aside>
+				</section>
 				<section>Slide 2</section>
 				<section>Slide 3</section>
 				<section>Slide 4</section>
@@ -57,9 +62,12 @@
 
 				// More info https://github.com/hakimel/reveal.js#dependencies
 				dependencies: [
+					{ src: 'lib/js/classList.js', condition: function () 
+						{ return !document.body.classList;}},
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
 					{ src: 'plugin/notes/notes.js', async: true },
+					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function () { return !!document.body.classList; } },
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
 				]
 			});
