Update title slide

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Neurophonetics\nVijay Solanki\nWeek 10\nThurs 16th March 2017
+				<section>Neurophonetics
+					<p>Vijay Solanki Week 10 Thurs 16th March 2017
+					</p>
 					<aside class = "notes">
 					 I am your notes!
 					</aside>
