Update title slide

--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Neurophonetics
-					<p>Vijay Solanki Week 10 Thurs 16th March 2017
+				<section>
+					<h1>Neurophonetics
+					</h1>
+					<h2>Vijay Solanki
+					</h2>
+					<p>Week 10 
+					</p>
+					<p>Thurs 16th March 2017
 					</p>
 					<aside class = "notes">
 					 I am your notes!
