Update title slide

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<title>Neurophonetics</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/blood.css">
+		<link rel="stylesheet" href="css/theme/sky.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -26,10 +26,10 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h1>Neurophonetics
-					</h1>
-					<h2>Vijay Solanki
+					<h2>Llama
 					</h2>
+					<h3>Vijay Solanki
+					</h3>
 					<p>Week 10 
 					</p>
 					<p>Thurs 16th March 2017
