--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h2>Llama
+					<h2>Neurophonetics
 					</h2>
 					<h3>Vijay Solanki
 					</h3>
