--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
+		
+		<!--Add support for earlier versions of Internet Explorer -->
+		<!--[if lt IE 9]>
+		<script src="lib/js/html5shiv.js"></script>
+		<![endif]-->
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -38,10 +43,60 @@
 					 I am your notes!
 					</aside>
 				</section>
-				<section>Slide 2</section>
-				<section>Slide 3</section>
-				<section>Slide 4</section>
-				<section>Slide 5</section>
+
+				<section>
+					<section>
+						<h2>What is Neurophonetics?</h2>
+					</section>
+
+					<section>
+						<!--h3>What is Neurophonetics?</h3-->
+						<blockquote align='left'>''Neurophonetics deals with neurogenic impairments of the motor act of speaking and of the perceptual processes of spoken language understanding, with the aim of unravelling the neural organization of speech motor control and speech perception.''
+						</blockquote>
+						<p align='right'>(Ziegler 2008: 491)</p>
+					</section>
+
+					<section>
+						<!--h3>What is Neurophonetics?</h3-->
+						<blockquote align='left'>''Neurophonetics aims at the elucidation of the brain mechanisms underlying speech communication in our species''
+						</blockquote>
+						<p align='right'>(Hertrich & Ackermann 2013)</p>
+					</section>
+
+					<section>
+						<!--h3>What is Neurophonetics?</h3-->
+						<blockquote align = 'left'>''To the extent that phonetics is a subdiscipline of linguistics, neurophonetics can be viewed as a subdiscipline of neurolinguistics''
+						</blockquote>
+						<p align='right'>(Ziegler 2008)</p>
+					</section>
+				</section>
+
+				<section>
+					<h3>Lecture Outline</h3>
+					<ol>
+						<li class='fragment' align='left'>Anatomy & Physiology of the Brain</li>
+						<li class='fragment' align='left'>The WLG Model</li>
+						<li class='fragment' align='left'>Measurement Tools</li>
+						<li class='fragment' align='left'>Modern Advances</li>
+						<ol>
+							<li class='fragment' align='left' type = 'a'>Classic Neuroimaging Studies</li>
+							<li class='fragment' align='left' type='a'>Anatomical Contributions</li>
+							<li class='fragment' align='left' type='a'>The Integration Problem</li>
+						</ol>
+						<li class='fragment' align='left'>Conclusion</li>
+					</ol>
+
+</section>
+				<section>
+					<h2>Warning slide</h2>
+					<p>There will be some bloody(ish) images</p>
+				</section>
+
+				<section>
+					<h2>Anatomy and physiology of the brain</h2>
+					<section>
+					</section>
+				</section>
 				<section>Slide 6</section>
 				<section>Slide 7</section>
 				<section>Slide 8</section>
