--- a/index.html
+++ b/index.html
@@ -93,11 +93,50 @@
 				</section>
 
 				<section>
-					<h2>Anatomy and physiology of the brain</h2>
 					<section>
+					<h2>Anatomy and physiology of the brain</h2>
+					</section>
+					<section data-background='./images/ned2.gif'>
+						<!--p>Test</p-->
+					</section>
+					<section>
+					<ul>
+					<li>The brain is made of NEURONS and GLIAL CELLS (but glial cells are not discussed here)</li>
+					<li class='fragment'>NEURONS are arranged into layers which allow for the efficient transfer of information, carried as electrical impulses</li>
+					<li class='fragment'>NEURONAL LAYERS in different areas are arranged to maximise processing efficiency for the functions that they are required to perform and provide the basis for the larger structures of the brain</li>
+					</p>
 					</section>
 				</section>
-				<section>Slide 6</section>
+
+				<section>
+					<section>
+						<h2>Neurons</h2>
+					</section>
+					<section>
+						<ul>
+							<li>Neurons transmit information to other neurons or muscles (via the brain stem)
+							</li>
+
+							<li class='fragment'>FIRING: electrical ACTION POTENTIAL travels down AXON to SYNAPSE (junction)
+							</li>
+
+							<li class='fragment'>A NEUROTRANSMITTER is released which either EXCITES or INHIBITS the post-synaptic cell	
+							</li>
+					</ul>
+						<img src='./images/giphy.gif' align='middle' class='fragment'>
+
+					</section>
+
+					<section>
+						<ul>
+							<li>MYELIN encases important connections, both to protect vital information transfer routes and to speed up transmission of the action potential
+							</li>
+						</ul>
+						<img src='./images/neurons.jpg' class='fragment'>
+						<img src='./images/giphy-90.gif' class='fragment'>
+					</section>
+
+				</section>
 				<section>Slide 7</section>
 				<section>Slide 8</section>
 				<section>Slide 9</section>
