Update slides and resources

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<section>
 					<h2>Anatomy and physiology of the brain</h2>
 					</section>
-					<section data-background='./images/ned2.gif'>
+					<section data-background='./resources/ned2.gif'>
 						<!--p>Test</p-->
 					</section>
 					<section>
@@ -113,32 +113,47 @@
 						<h2>Neurons</h2>
 					</section>
 					<section>
-						<ul>
-							<li>Neurons transmit information to other neurons or muscles (via the brain stem)
-							</li>
+						<p align='left'>Neurons transmit information to other neurons or muscles (via the brain stem)
+						</p>
 
-							<li class='fragment'>FIRING: electrical ACTION POTENTIAL travels down AXON to SYNAPSE (junction)
-							</li>
+						<p class='fragment' align='left'>FIRING: electrical ACTION POTENTIAL travels down AXON to SYNAPSE (junction)
+						</p>
 
-							<li class='fragment'>A NEUROTRANSMITTER is released which either EXCITES or INHIBITS the post-synaptic cell	
-							</li>
-					</ul>
-						<img src='./images/giphy.gif' align='middle' class='fragment'>
+						<p class='fragment' align='left'>A NEUROTRANSMITTER is released which either EXCITES or INHIBITS the post-synaptic cell	
+						</p>
+						<img src='./resources/giphy.gif' align='middle' class='fragment'>
 
 					</section>
 
 					<section>
-						<ul>
-							<li>MYELIN encases important connections, both to protect vital information transfer routes and to speed up transmission of the action potential
-							</li>
-						</ul>
-						<img src='./images/neurons.jpg' class='fragment'>
-						<img src='./images/giphy-90.gif' class='fragment'>
+						<p align='left'>MYELIN encases important connections, both to protect vital information transfer routes and to speed up transmission of the action potential
+						</p>
+						<img src='./resources/neurons.jpg' class='fragment' height='450px'>
+						<img src='./resources/giphy-90.gif' class='fragment' height='450px'>
 					</section>
 
 				</section>
-				<section>Slide 7</section>
-				<section>Slide 8</section>
+
+				<section>
+					<section>
+						<h2>Neuronal Layers</h2>
+					</section>
+					<section>
+						<div style='float:right;'>
+							<img src='./resources/neuro-layers.jpg'>
+						</div>
+						<p align='left'>Neurons are arranged into layers specific to the functions that they are required to perform</p>
+
+<p class = fragment align='left'>Neurons that perform similar functions are LOCALISED to a particular region of the brain</p>
+
+					</section>
+				</section>
+
+				<section>
+					<a href='http://www.g2conline.org/2022'>
+						G2C Online
+					</a>
+				</section>
 				<section>Slide 9</section>
 				<section>Slide 10</section>
 				<section>Slide 11</section>
