--- a/index.html
+++ b/index.html
@@ -699,32 +699,42 @@ Also see: Bastos, et al. (2015); Brunet, et al. (2015)</section>
 				<section>Conclusion?
 “it takes the whole brain and, by extension, the whole person to participate in producing and perceiving a voice”
 Sidtis & Kreiman (2011)</section>
-				<section>References
-Andoh, J., Artiges, E., Pallier, C., Riviиre, D., Mangin, J.-F., Paillиre-Martinot, M.-L. & Martinot, J.-L. (2008). Priming frequencies of transcranial magnetic stimulation over Wernicke's area modulate word detection.. Cerebral cortex (New York, N.Y. : 1991) 18 (1), 210--6. (Doi: 10.1093/cercor/bhm047.) Retrieved from http://cercor.oxfordjournals.org/content/18/1/210.full.
- 
-Anwander, A., Tittgemeyer, M., von Cramon, D. Y., Friederici, A. D. & Knцsche, T. R. (2007). Connectivity-Based Parcellation of Broca's Area.. Cerebral cortex (New York, N.Y. : 1991) 17 (4), 816--25. (Doi: 10.1093/cercor/bhk034.) Retrieved from http://cercor.oxfordjournals.org/content/17/4/816.full.
- 
-Bastos, A. M., Vezoli, J. & Fries, P. (2015). Communication through coherence with inter-areal delays. Current Opinion in Neurobiology 31, 173--180. (Doi: 10.1016/j.conb.2014.11.001.) Retrieved from http://www.sciencedirect.com/science/article/pii/S0959438814002165.
- 
-Brunet, N., Vinck, M., Bosman, C. A., Singer, W. & Fries, P. (2014). Gamma or no gamma, that is the question. Trends in Cognitive Sciences 18 (10), 507--509. (Doi: 10.1016/j.tics.2014.08.006.) Retrieved from http://www.sciencedirect.com/science/article/pii/S1364661314002009.
- 
-Davis, M. H. & Johnsrude, I. S. (2003). Hierarchical Processing in Spoken Language Comprehension. J. Neurosci. 23 (8), 3423--3431. Retrieved from http://www.jneurosci.org/content/23/8/3423.short.
- 
-Feng, S., Legault, J., Yang, L., Zhu, J., Shao, K. & Yang, Y. (2015). Differences in grammatical processing strategies for active and passive sentences: An fMRI study. Journal of Neurolinguistics 33 (0), 104--117. (Doi: http://dx.doi.org/10.1016/j.jneuroling.2014.09.002.) Retrieved from http://www.sciencedirect.com/science/article/pii/S0911604414000591. </section>
-				<section>References
+				<section>
 
-Francis, A. L. & Driscoll, C. (2006). Training to use voice onset time as a cue to talker identification induces a left-ear/right-hemisphere processing advantage.. Brain and language 98 (3), 310--8. (Doi: 10.1016/j.bandl.2006.06.002.) Retrieved from http://www.sciencedirect.com/science/article/pii/S0093934X06001131.
+					<section>
+						<h2>References</h2>
+					</section>
 
- 
-
-Friederici, A. D. (2012). The cortical language circuit: from auditory perception to sentence comprehension. Trends in Cognitive Sciences 16 (5), 262--268. (Doi: http://dx.doi.org/10.1016/j.tics.2012.04.001.) Retrieved from http://www.sciencedirect.com/science/article/pii/S1364661312000794.
-
- 
-
-Friederici, A. D. (2011). The brain basis of language processing: from structure to function.. Physiological reviews 91 (4), 1357--92. (Doi: 10.1152/physrev.00006.2011.) Retrieved from http://physrev.physiology.org/content/91/4/1357.full-text.pdf+html.
-
- 
-
+					<section>
+						<small align='left'>Andoh, J., Artiges, E., Pallier, C., Riviиre, D., Mangin, J.-F., Paillиre-Martinot, M.-L. & Martinot, J.-L. (2008). Priming frequencies of transcranial magnetic stimulation over Wernicke's area modulate word detection.. Cerebral cortex (New York, N.Y. : 1991) 18 (1), 210--6. (Doi: 10.1093/cercor/bhm047.) Retrieved from http://cercor.oxfordjournals.org/content/18/1/210.full.
+						</small>
+ 						<br></br>
+						<small align='left'>Anwander, A., Tittgemeyer, M., von Cramon, D. Y., Friederici, A. D. & Knцsche, T. R. (2007). Connectivity-Based Parcellation of Broca's Area.. Cerebral cortex (New York, N.Y. : 1991) 17 (4), 816--25. (Doi: 10.1093/cercor/bhk034.) Retrieved from http://cercor.oxfordjournals.org/content/17/4/816.full.
+						</small>
+  						<br></br>
+						<small align='left'>Bastos, A. M., Vezoli, J. & Fries, P. (2015). Communication through coherence with inter-areal delays. Current Opinion in Neurobiology 31, 173--180. (Doi: 10.1016/j.conb.2014.11.001.) Retrieved from http://www.sciencedirect.com/science/article/pii/S0959438814002165.
+						</small>
+  						<br></br>
+						<small align='left'>Brunet, N., Vinck, M., Bosman, C. A., Singer, W. & Fries, P. (2014). Gamma or no gamma, that is the question. Trends in Cognitive Sciences 18 (10), 507--509. (Doi: 10.1016/j.tics.2014.08.006.) Retrieved from http://www.sciencedirect.com/science/article/pii/S1364661314002009.
+						</small>
+					</section> 
+							
+					<section>
+						<small align='left'>Davis, M. H. & Johnsrude, I. S. (2003). Hierarchical Processing in Spoken Language Comprehension. J. Neurosci. 23 (8), 3423--3431. Retrieved from http://www.jneurosci.org/content/23/8/3423.short.
+						</small>
+  						<br></br>
+						<small align='left'>Feng, S., Legault, J., Yang, L., Zhu, J., Shao, K. & Yang, Y. (2015). Differences in grammatical processing strategies for active and passive sentences: An fMRI study. Journal of Neurolinguistics 33 (0), 104--117. (Doi: http://dx.doi.org/10.1016/j.jneuroling.2014.09.002.) Retrieved from http://www.sciencedirect.com/science/article/pii/S0911604414000591.
+						</small>
+  						<br></br>
+						<small align='left'>Francis, A. L. & Driscoll, C. (2006). Training to use voice onset time as a cue to talker identification induces a left-ear/right-hemisphere processing advantage.. Brain and language 98 (3), 310--8. (Doi: 10.1016/j.bandl.2006.06.002.) Retrieved from http://www.sciencedirect.com/science/article/pii/S0093934X06001131.
+						</small>
+  						<br></br>
+						<small align='left'>Friederici, A. D. (2011). The brain basis of language processing: from structure to function.. Physiological reviews 91 (4), 1357--92. (Doi: 10.1152/physrev.00006.2011.) Retrieved from http://physrev.physiology.org/content/91/4/1357.full-text.pdf+html.
+						</small>
+				</section>
+				<section>
+						<small align='left'>Friederici, A. D. (2012). The cortical language circuit: from auditory perception to sentence comprehension. Trends in Cognitive Sciences 16 (5), 262--268. (Doi: http://dx.doi.org/10.1016/j.tics.2012.04.001.) Retrieved from http://www.sciencedirect.com/science/article/pii/S1364661312000794.
+						</small>
 Fries, P. & Others (2005). A mechanism for cognitive dynamics: neuronal communication through neuronal coherence. Trends in cognitive sciences 9 (10), 474--480.
 
  
@@ -733,8 +743,7 @@ Ghitza, O., Giraud, A.-L. & Poeppel, D. (2012). Neuronal oscillations and speech
 
  
 
-Giraud, A.-L. & Poeppel, D. (2012). Cortical oscillations and speech processing: emerging computational principles and operations.. Nature neuroscience 15 (4), 511--7. (Doi: 10.1038/nn.3063.) Retrieved from http://www.ncbi.nlm.nih.gov/pubmed/22426255. </section>
-				<section>References
+Giraud, A.-L. & Poeppel, D. (2012). Cortical oscillations and speech processing: emerging computational principles and operations.. Nature neuroscience 15 (4), 511--7. (Doi: 10.1038/nn.3063.) Retrieved from http://www.ncbi.nlm.nih.gov/pubmed/22426255. 
 
 Golestani, N., Molko, N., Dehaene, S., LeBihan, D. & Pallier, C. (2007). Brain structure predicts the learning of foreign speech sounds.. Cerebral cortex (New York, N.Y. : 1991) 17 (3), 575--82. (Doi: 10.1093/cercor/bhk001.) Retrieved from http://cercor.oxfordjournals.org/content/17/3/575.full.
 
@@ -783,13 +792,15 @@ Van Horn, J. D., Irimia, A., Torgerson, C. M., Chambers, M. C., Kikinis, R. & To
 Zatorre, R. J., Belin, P. & Penhune, V. B. (2002). Structure and function of auditory cortex: music and speech. Trends in cognitive sciences 6 (1), 37--46. Retrieved from http://www.ncbi.nlm.nih.gov/pubmed/11849614.
  
 Ziegler, W. (2009). Neurophonetics. In The Handbook of Clinical Linguistics (pp. 491--505). Blackwell Publishing Ltd. (ISBN: 9781444301007.) Retrieved from http://dx.doi.org/10.1002/9781444301007.ch31. </section>
-				<section>References
-Web Sources
+				<section>
+				<h2>Web Sources</h2>
 [1] - http://www.rijnlandmodel.nl/achtergrond/psychologie/neurologie_neuronen_algemeen.htm
 [2] - http://thebrain.mcgill.ca/flash/d/d_02/d_02_cl/d_02_cl_vis/d_02_cl_vis.html
 [3] - http://neuropathology-web.org/chapter2/chapter2bCerebralinfarcts.html
 [4] - http://www.kgu.de/bic/common.htm
-[5] - http://cfmm.robarts.ca/tools/3t-mri/</section>
+[5] - http://cfmm.robarts.ca/tools/3t-mri/
+					</section>
+				</section>
 			</div>
 		</div>
 
