--- a/index.html
+++ b/index.html
@@ -427,22 +427,22 @@
 <section>
   <h2>Broca & Wernicke</h2>
   <table border='0' width=100% height=100%>
-    <tr>
+    <tr class='fragment'>
       <td>
         <img align='left' src='resources/Broca.jpg' alt='Paul Broca' style='height:250px;margin: 20px 20px'>
         <div>
-        <p>
-          Paul Broca (1824-1880)
-        </p>
-        <p style="font-size:70%;">
-          Broca’s patient, ‘Tan’ – 1861:
-        </p>
+          <p>
+            Paul Broca (1824-1880)
+          </p>
+          <p style="font-size:70%;">
+            Broca’s patient, ‘Tan’ – 1861:
+          </p>
           <p style="font-size:70%;">Problem with production (only one syllable ‘tan’)</p>
           <p style="font-size:70%;">Large cyst in the left hemisphere (“mushy and deformed”)</p>
         </div>
       </td>
     </tr>
-    <tr>
+    <tr class='fragment'>
       <td>
         <img align='left' src='resources/Wernicke.jpg' alt='Karl Wernicke' style='height:250px;margin: 20px 20px'>
         <p>
@@ -451,77 +451,177 @@
         <p style="font-size:70%;">
           Wernicke’s patient – 1874:
         </p>
-          <p style="font-size:70%;">Patient who could speak but couldn’t comprehend language</p>
-          <p style="font-size:70%;">Lesion at the crossroads of 2 lobes of the brain</p>
+        <p style="font-size:70%;">Patient who could speak but couldn’t comprehend language</p>
+        <p style="font-size:70%;">Lesion at the crossroads of 2 lobes of the brain</p>
       </td>
     </tr>
   </table>
 </section>
 
-<section>Broca’s Area
-
-  Where?
-  Frontal lobe - Inferior frontal gyrus
-  Pars opercularis
-  Pars triangularis
-
-  Anwander, et al. (2007)</section>
-<section>Broca’s Aphasia
-
-  Function
-  Motor language area
-  Expression
-  Aphasia
-  Motor / non-fluent aphasia
-  Good comprehension, no/impaired speech
-  E.G. ‘boy go store’ vs ‘The boy has gone to the store’
-  Slow, laboured, ungrammatical speech
-  “yes…ah…Monday…ah…dad and…and…ah…hospital….and ah….Wednesday….Wednesday”
-
-  http://youtu.be/f2IiMEbMnPM</section>
-<section>Broca’s Area
-  Photograph of the brain of Paul Broca’s patient called “Tan”</section>
-<section>Wernicke’s Area
-
-  Where?
-  Temporal/Parietal lobe
-  Supramaringal gyrus
-  Angular gyrus
-
-  Andoh, et al. (2008)</section>
-<section>Wernicke’s Area
-
-  Function
-  Sensory language area
-  Comprehension
-  Aphasia
-  Fluent / Receptive (cortical sensory) aphasia
-  defect in comprehension, good spontaneous speech
-  Anomic aphasia - word finding difficulty
-  Jargon aphasia - fluent, but unintelligible jargon
-
-  http://youtu.be/aVhYN7NTIKU</section>
-<section>The WLG Model
-
-  Broca’s and Wernicke’s areas are connected via the ARCUATE FASCICULUS
-  This view was dominant for more than a century and still carries weight today
-  It is known as the Wernicke-Lichtheim-Gerschwind Model (WLG model), named after those that helped to develop it
-
-  Hagoort (2014)</section>
-<section>Summary
-
-  Broca’s area
-  Inferior frontal gyrus (frontal lobe)
-  Good comprehension but impaired speech
-  Seat of language production(?)
-  Wernicke’s area
-  Supramaringal/angular gyrus (temporal/parietal lobe)
-  Good production but defect in comprehension
-  Seat of language comprehension(?)
-  Both localised to left hemisphere
-  They operate together as part of a larger network
+<section>
+  <h2>Broca’s Area</h2>
+  <div align='left'>
+    <h3>Where?</h3>
+    <p>Frontal lobe - Inferior frontal gyrus</p>
+    <ul>
+      <li>Pars opercularis</li>
+      <li>Pars triangularis</li>
+    </ul>
+  </div>
+  <div align='right'>
+    <table style='border:0px'>
+      <tr style='border:0px'>
+        <td style='border:0px'>
+          <img src='resources/Broca-large.jpg' alt='Brocas area, Anwander, et al. (2007)' style=width:300px align='right'>
+        </td>
+      </tr>
+      <tr style='border:0px'>
+        <td style='border:0px'>
+          <p align='right'><small>Anwander, et al. (2007)</small></p>
+        </td>
+      </tr>
+    </table>
+  </div>
 </section>
+
+<section>
+  <h2>Broca’s Aphasia</h2>
+  <div align='left' class='fragment'>
+    <h3>Function</h3>
+    <ul style='font-size:80%'>
+      <li>Motor language area</li>
+      <li>Expression</li>
+    </ul>
+  </div>
+  <div align='left' class='fragment'>
+    <h3>Aphasia</h3>
+    <ul style='font-size:80%'>
+      <li>Motor / non-fluent aphasia</li>
+      <li>Good comprehension, no/impaired speech</li>
+      <li>E.G. ‘boy go store’ vs ‘The boy has gone to the store’</li>
+      <li>Slow, laboured, ungrammatical speech</li>
+      <li>“yes…ah…Monday…ah…dad and…and…ah…hospital….and ah….Wednesday….Wednesday”</li>
+    </ul>
+  </div>
 </section>
+
+<section>
+  <iframe width='100%' height="600" src="https://www.youtube.com/embed/f2IiMEbMnPM" frameborder="0" allowfullscreen></iframe>
+  <!--   http://youtu.be/f2IiMEbMnPM -->
+</section>
+
+<section>
+  <h2>Broca’s Area</h2>
+  <div>
+    <p align='left'>
+      Photograph of the brain of Paul Broca’s patient called “Tan”
+    </p>
+    <table>
+      <tr>
+        <td>
+          <img src='resources/tan-left.png' alt='Tan lesion, view from left hemisphere'>
+        </td>
+        <td>
+          <img src='resources/tan-right.png' alt='Tan lesion, view from above'>
+        </td>
+      </tr>
+    </table>
+  </div>
+</section>
+
+<section>
+  <h2>Wernicke’s Area</h2>
+  <div align='left'>
+    <h3>Where?</h3>
+    <p>Temporal/Parietal lobe</p>
+    <ul>
+      <li>Supramaringal gyrus</li>
+      <li>Angular gyrus</li>
+    </ul>
+  </div>
+  <div align='right'>
+    <table style='border:0px'>
+      <tr style='border:0px'>
+        <td style='border:0px'>
+          <img src='resources/Wernicke-large.jpg' alt='Wernicke area, Andoh, et al. (2008)' style=width:700px>
+        </td>
+      </tr>
+      <tr style='border:0px'>
+        <td style='border:0px'>
+          <p align='right'><small>Andoh, et al. (2008)</small></p>
+        </td>
+      </tr>
+    </table>
+  </div>
+</section>
+
+<section>
+  <h2>Wernicke’s Aphasias</h2>
+  <div align='left' class='fragment'>
+    <h3>Function</h3>
+    <ul style='font-size:80%'>
+      <li>Sensory language area</li>
+      <li>Comprehension</li>
+    </ul>
+  </div>
+  <div align='left' class='fragment'>
+    <h3>Aphasia</h3>
+    <ul style='font-size:80%'>
+      <li>Fluent / Receptive (cortical sensory) aphasia</li>
+      <li>Defect in comprehension, good spontaneous speech</li>
+      <li>Anomic aphasia - word finding difficulty</li>
+      <ul>
+        <li>Slow, laboured, ungrammatical speech</li>
+        <li>Jargon aphasia - fluent, but unintelligible jargon</li>
+      </ul>
+    </ul>
+  </div>
+</section>
+
+<section>
+  <iframe width="100%" height="600" src="https://www.youtube.com/embed/aVhYN7NTIKU" frameborder="0" allowfullscreen></iframe>
+</section>
+
+<section>
+  <h2>The WLG Model</h2>
+  <div align='left' style='font-size:80%'>
+    <img src='resources/Hagoort-2014-001.jpg' alt='Hagoort (2014), WLG model.' style='vertical-align:top; margin:0px 25px' width=500px height=450px align='right'/>
+    <p>Broca’s and Wernicke’s areas are connected via the <span class='fragment highlight-red'>ARCUATE FASCICULUS</span></p>
+    <p class='fragment'>This view was dominant for more than a century and still carries weight today</p>
+    <p class='fragment'>It is known as the Wernicke-Lichtheim-Gerschwind Model (WLG model), named after those that helped to develop it</p>
+  </div>
+  <small align='right'>Hagoort (2014)</small>
+</section>
+
+<section>
+  <h2>Summary</h2>
+<ul>
+  <div class='fragment'>
+  <li>Broca’s area</li>
+  <ul>
+  <li>Inferior frontal gyrus (frontal lobe)</li>
+  <li>Good comprehension but impaired speech</li>
+  <li>Seat of language production(?)</li>
+  </ul>
+  </div>
+  <div class='fragment'>
+  <li>Wernicke’s area</li>
+  <ul>
+  <li>Supramaringal/angular gyrus (temporal/parietal lobe)</li>
+  <li>Good production but defect in comprehension</li>
+  <li>Seat of language comprehension(?)</li>
+  </ul>
+  </div>
+  <li class='fragment'>Both localised to left hemisphere</li>
+  <li class='fragment'>They operate together as part of a larger network</li>
+  </ul>
+</section>
+
+</section>
+
+
+
+
 <section>
   <section><h2>Measurement Tools</h2></section>
   <section>We’ve come a long way…
@@ -1072,7 +1172,7 @@
     slideNumber: false,
 
     // Push each slide change to the browser history
-    history: false,
+    history: true,
 
     // Enable keyboard shortcuts for navigation
     keyboard: true,
