--- a/index.html
+++ b/index.html
@@ -408,13 +408,13 @@
   <h3>
     Brain Pathology and Language
   </h3>
-  <p>Aphasia:</p>
-  <div class='fragment'>
+  <p align='left'>Aphasia:</p>
+  <div class='fragment' align='left'>
     <p>
       Loss or impairment of the ability to produce or comprehend language, due to brain damage
     </p>
   </div>
-  <div class='fragment'>
+  <div class='fragment' align='left'>
     <p>Various types:</p>
     <ul>
       <li>Global</li>
@@ -426,9 +426,9 @@
 
 <section>
   <h2>Broca & Wernicke</h2>
-  <table border='0' width=100% height=100%>
+  <table style='border:0px' width=100% height=100%>
     <tr class='fragment'>
-      <td>
+      <td style='border:0px'>
         <img align='left' src='resources/Broca.jpg' alt='Paul Broca' style='height:250px;margin: 20px 20px'>
         <div>
           <p>
@@ -595,25 +595,25 @@
 
 <section>
   <h2>Summary</h2>
-<ul>
-  <div class='fragment'>
-  <li>Broca’s area</li>
   <ul>
-  <li>Inferior frontal gyrus (frontal lobe)</li>
-  <li>Good comprehension but impaired speech</li>
-  <li>Seat of language production(?)</li>
-  </ul>
-  </div>
-  <div class='fragment'>
-  <li>Wernicke’s area</li>
-  <ul>
-  <li>Supramaringal/angular gyrus (temporal/parietal lobe)</li>
-  <li>Good production but defect in comprehension</li>
-  <li>Seat of language comprehension(?)</li>
-  </ul>
-  </div>
-  <li class='fragment'>Both localised to left hemisphere</li>
-  <li class='fragment'>They operate together as part of a larger network</li>
+    <div class='fragment'>
+      <li>Broca’s area</li>
+      <ul>
+        <li>Inferior frontal gyrus (frontal lobe)</li>
+        <li>Good comprehension but impaired speech</li>
+        <li>Seat of language production(?)</li>
+      </ul>
+    </div>
+    <div class='fragment'>
+      <li>Wernicke’s area</li>
+      <ul>
+        <li>Supramaringal/angular gyrus (temporal/parietal lobe)</li>
+        <li>Good production but defect in comprehension</li>
+        <li>Seat of language comprehension(?)</li>
+      </ul>
+    </div>
+    <li class='fragment'>Both localised to left hemisphere</li>
+    <li class='fragment'>They operate together as part of a larger network</li>
   </ul>
 </section>
 
@@ -654,320 +654,217 @@
     Web Source [4]</section>
 </section>
 
+
+
+
 <section>
-  <section><h2>Modern Advances</h2></section>
-  <section>Classic neuroimaging evidence about language processing
-    Scott, et al. (2000)
 
-    Normal Speech
-
-    (Sp)
-
-    Spectrally Rotated Speech
-
-    (RSp)
-
-    Vocoded Speech
-
-    (VCo)
-
-    Rotated vocoded Speech
-
-    (RVCo)
-
-    http://www.phon.ucl.ac.uk/home/brain/ </section>
-  <section>Classic neuroimaging evidence about language processing
-    Scott, et al. (2000)
-
-    Red = Responses to sounds with phonetic information
-
-    ie. Sp, RSp & VCo
-
-    Yellow = Responses to sounds that are intelligible
-
-    ie. Sp & VCo
-
-    http://www.phon.ucl.ac.uk/home/brain/ </section>
-  <section>Classic neuroimaging evidence about language processing
-
-    Davis & Johnsrude
-
-    (2003)
-
-    English sentences, distorted in a variety of ways.
-
-    Looked for correlations between blood flow and intelligibility of speech sounds
-
-    Left: intelligible speech vs noise
-
-    Right: responses to different forms of distortion</section>
-  <section>Classic neuroimaging evidence about language processing
-
-    Scott and Johnsrude (2003)
-
-    Articulation (Wise et al. 2001)
-
-    Increasing numbers of channels of noise vocoded speech (Scott et al.)
-
-    Phonological (versus acoustic) change (Jacquemot et al.)
-
-    Speech and noise vocoded speech (vs. spectrally rotated equivalents)
-
-    (Scott et al. 2000)
-
-    “Where/How”
-
-    “What”
-
-    Hickock & Poeppel (2004)
-
-    Superior Temporal Gyrus
-
-    Bilateral (both hemispheres)
-    Acoustic-phonetic forms
-
-    Dorsal Stream (left only)
-    Wernicke’s area
-    Broca’s area
-    Motor cortex
-    Articulatory forms
-
-    Ventral Stream (left only)
-    Posterior Inferior Temporal Lobe
-    Sound-meaning interface
+  <section>
+    <h2>Modern Advances</h2>
   </section>
-  <section>Lateralisation of language functions
 
-    Left Hemisphere
+  <section>
+    <h3>Classic neuroimaging evidence about language processing</h3>
+    <div align='left'>
+      <img src='resources/scott-spect-2000.png'alt='Scott (2000), spectrogram.' style='vertical-align:top; margin:0px 25px' width=500px height=500px align='right'/>
+      <a href='http://www.phon.ucl.ac.uk/home/brain/'><h4 style='color:blue'>
+        Scott, et al (2000)
+        </h4> </a>
+      <audio src='resources/06_r40n.wav'>test1</audio>
+      <audio src='resources/06_r40.wav'>test2</audio>
+      <audio src='resources/06_40n.wav'>test3</audio>
+      <audio src='resources/06_40.wav'>test4</audio>
+      <div class='fragment'>
+        <p>Normal Speech (Sp) </p>
+        <p>Spectrally Rotated Speech (RSp)</p>
+        <p>Vocoded Speech (VCo)</p>
+        <p>Rotated vocoded Speech (RVCo)</p>
+      </div>
+    </div>
+  </section>
 
+  <section>
+    <h3>Classic neuroimaging evidence about language processing</h3>
+    <div align='left'>
+      <img src='resources/scott-2000-small.png'alt='Scott (2000), spectrogram.' style='vertical-align:top; margin:0px 25px' width=500px height=500px align='right'/>
+      <a href='http://www.phon.ucl.ac.uk/home/brain/'><h4 style='color:blue'>
+        Scott, et al (2000)
+        </h4> </a>
+      <div style='font-size:80%'>
+        <p><span style='color:red'>Red</span> = Responses to sounds with phonetic information</p>
+        <p>ie. Sp, RSp & VCo</p>
+        <p><span style='color:yellow'>Yellow</span> = Responses to sounds that are intelligible</p>
+        <p>ie. Sp & VCo</p>
+      </div>
+      </section>
 
-    Right Hemisphere
+    <section>
+      <h3>Classic neuroimaging evidence about language processing</h3>
+      <div align='left'>
+        <h4> Davis & Johnsrude (2003)</h4>
+        <p>
+          English sentences, distorted in a variety of ways.
+        </p>
+        <p>
+          Looked for correlations between blood flow and intelligibility of speech sounds
+        </p>
+      </div>
+      <table style='float: right'>
+        <tr>
+          <td colspan='2'>
+            <image src='resources/davis-2003.jpg' alt='Findings of Davis and Johnsrude (2003)' style='vertical-align:top' width =500px/>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Left: intelligible speech vs noise
+          </td>
+          <td>
+            Right: responses to different forms of distortion
+          </td>
+        </tr>
+      </table>
 
-    Traditionally thought to be dominant for language processing
+    </section>
 
-    Preference for intelligible speech (Scott et al.)
+    <section>
+      <h3>Classic neuroimaging evidence about language processing</h3>
+      <img src='resources/Hickock-2004.jpg' alt='Hickock (2004) diagram' style='vertical-align:top; margin:0px 25px' align='left' width=400px/>
+      <p align='left'>Hickock & Poeppel (2004)</p>
+      <div align='left' style='font-size:60%' class='fragment'>
+        <p>Superior Temporal Gyrus</p>
+        <ul>
+          <li>Bilateral (both hemispheres)</li>
+          <li>Acoustic-phonetic forms</li>
+        </ul>
+      </div>
+      <div align='left' style='font-size:60%' class='fragment'>
+        <p>Dorsal Stream (left only)</p>
+        <ul>
+          <li>Wernicke’s area</li>
+          <li>Broca’s area</li>
+          <li>Motor cortex</li>
+          <li>Articulatory forms</li>
+        </ul>
+      </div>
+      <div align='left' style='font-size:60%' class='fragment'>
+        <p>Ventral Stream (left only)</p>
+        <ul>
+          <li>Posterior Inferior Temporal Lobe</li>
+          <li>Sound-meaning interface</li>
+        </ul>
+      </div>
+    </section>
 
+    <section>
+      <h3>Lateralisation of language functions</h3>
+      <table style='font-size:25px'>
+        <tr>
+          <th>
+            Left Hemisphere
+          </th>
+          <th>
+            Right Hemisphere
+          </th>
+        <tr>
+          <td class='fragment'>
+            <p style='font-size=60%'>Traditionally thought to be dominant for language processing</p>
+            <p style='font-size=60%'>Preference for intelligible speech</p>
+          </td>
+          <td class='fragment'>
+            <p>Damage may spare production and comprehension, but can lead to problems with: pragmatic ability, prosody, speaker characteristics (phonagnosia), recognition of music & environmental sounds</p>
+          </td>
+        </tr>
+        <tr>
+          <td class='fragment'>
+            Possibly more sensitive to phonetic form with better time resolution (limited evidence)
+          </td>
+          <td class='fragment'>
+            Possibly more sensitive to speaker characteristics with better frequency resolution (limited evidence)
+          </td>
+        </tr>
+      </table>
+      <p></p>
+      <small align='right'>Zatorre, et al. (2002); Scott, et al. (2009); Francis & Driscoll (2006); Friederici (2011)</small>
+    </section>
 
-    Damage may spare production and comprehension, but can lead to problems with pragmatic ability, prosody, speaker characteristics (phonagnosia), recognition of music & environmental sounds
+    <section>
+      <h3>Lateralisation of language functions</h3>
+      <img src='resources/valaki-2004.png' alt='Valaki (2004)' style='vertical-align:top; margin:0px 25px' align='right' width=500px/>
+      <div align='left'>
+        <p>Spoken word recognition test, was used to establish cerebral dominance</p>
+        <p>Lateralisation (%Ss):
+        <ul>
+          <li>Spanish 100% left</li>
+          <li>English 80% left</li>
+          <li>Chinese 79% bilateral</li>
+        </ul>
+        </p>
+      <p>(tone lang.)</p>
+      </div>
 
-    Possibly more sensitive to phonetic form with better time resolution (limited evidence)
-
-
-    Possibly more sensitive to speaker characteristics with better frequency resolution (limited evidence)
-
-    Zatorre, et al. (2002); Scott, et al. (2009); Francis & Driscoll (2006);
-
-    Friederici (2011)
-
-    Left Hemisphere
-
-    Right Hemisphere
-
-    speech
-
-    Traditionally thought to be
-
-    dominant for language processing
-
-    Preference for
-
-    intelligible
-
-    Damage
-
-    may
-
-    spare production and
-
-    comprehension, but can lead to
-
-    problems with pragmatic ability,
-
-    prosody, speaker characteristics
-
-    (
-
-    phonagnosia
-
-    ), recognition of
-
-    music & environmental sounds
-
-    Possibly more sensitive to phonetic
-
-    form with
-
-    better time resolution
-
-    (limited
-
-    evidence
-
-    )
-
-    Possibly more sensitive to speaker
-
-    characteristics with better frequency
-
-    resolution (limited evidence)</section>
-  <section>Chinese English Spanish
+    Chinese English Spanish
 
     Valaki et al. (2004)
+  </section>
 
-    Spoken word recognition test, which is used to establish cerebral dominance
-
-    Lateralisation (%Ss):
-
-    Spanish 100% left
-
-    English 80% left
-
-    Chinese 79% bilateral
-
-    (tone lang.)
-
-    Lateralisation of language functions</section>
-  <section>Language Processing Beyond the Cortex
-
-    Cerebellum
-
-
-    Basal Ganglia
-
-
-    Thalamus
-
-
-    Hippocampus
-
-
-    Co-ordinates muscle groups to produce smooth speech & swallowing.
-
-    Helps integrate sensory perception and motor output.
-
-    Damage can lead to slurring of speech
-
-
-    Controls muscles of face, larynx, tongue and pharynx
-
-    Damage can lead to lack of coordination and facial expression (e.g. Parkinson’s)
-
-    Also disruption to rhythm and temporal processing
-
-
-    Inner chamber
-
-    determines which sensory information to forward to cortex
-
-    Damage can lead to deficits in memory, attention, reduced spontaneous speech
-
-
-    Long-term memory, language comprehension, word-generation
-
-    Damage (severe in Alzheimer's) can lead to word-finding difficulties
+  <section>
+    <h3>Language Processing Beyond the Cortex</h3>
+    <table>
+      <tr>
+        <th>
+          Cerebellum
+        </th>
+        <th>
+          Basal Ganglia
+        </th>
+        <th>
+          Thalamus
+        </th>
+        <th>
+          Hippocampus
+        </th>
+      </tr>
+      <tr>
+        <td>
+          <img src='resources/Cerebellum.png' width='300px'/>
+        </td>
+        <td>
+          <img src='resources/Basal-Ganglia.png' width='300px'/>
+        </td>
+        <td>
+          <img src='resources/Thalamus.png'/>
+        </td>
+        <td>
+          <img src='resources/Hippocampus.png'/>
+        </td>
+      </tr>
+      <tr>
+        <td>Co-ordinates muscle groups to produce smooth speech & swallowing.</td>
+        <td>Controls muscles of face, larynx, tongue and pharynx</td>
+        <td>Inner chamber determines which sensory information to forward to cortex</td>
+        <td>Long-term memory, language comprehension, word-generation</td>
+      </tr>
+      <tr>
+        <td>Helps integrate sensory perception and motor output.
+        <td>Damage can lead to lack of coordination and facial expression (e.g. Parkinson’s)</td>
+        <td>Damage can lead to deficits in memory, attention, reduced spontaneous speech</td>
+        <td>Damage (severe in Alzheimer's) can lead to word-finding difficulties</td>
+      </tr>
+      <tr>
+        <td>Damage can lead to slurring of speech</td>
+        <td>Also disruption to rhythm and temporal processing</td>
+      </tr>
+    </table>
 
     Parkinson’s speech sample
 
     courtesy of Dr Anja Lowit (Strathclyde)
 
-    Cerebellum
+  </section>
 
-    Basal Ganglia
-
-    Thalamus
-
-    Hippocampus
-
-    Co
-
-    -
-
-    ordinates muscle
-
-    groups to produce
-
-    smooth
-
-    speech &
-
-    swallowing.
-
-    Helps integrate
-
-    sensory perception
-
-    and motor output.
-
-    Damage can lead to
-
-    slurring of speech
-
-    Controls muscles of
-
-    face, larynx, tongue
-
-    and pharynx
-
-    Damage can lead to
-
-    lack of coordination
-
-    and facial
-
-    expression (e.g.
-
-    Parkinson’s)
-
-    Also disruption to
-
-    rhythm and
-
-    temporal processing
-
-    Inner chamber
-
-    determines which
-
-    sensory information
-
-    to forward to cortex
-
-    Damage can lead to
-
-    deficits in memory,
-
-    attention, reduced
-
-    spontaneous speech
-
-    -
-
-    -
-
-    Long
-
-    term memory,
-
-    language
-
-    comprehension,
-
-    word
-
-    generation
-
-    Damage (severe in
-
-    Alzheimer's) can
-
-    lead to word
-
-    -
-
-    finding
-
-    difficulties</section>
-  <section>Neural correlates of phonetic skill
+  <section>
+    <h3>Neural correlates of phonetic skill</h3>
     “Born with an ear for dialects?”
 
     In naïve (English) listeners, an individual’s brain structure in left auditory cortex, parietal cortex, and left inferior frontal cortex partly predicts their ability to discriminate a difficult contrast (Hindi dental vs. retroflex) (Golestani et al., 2002, 2007)
@@ -1160,8 +1057,11 @@
 <script>
   // More info https://github.com/hakimel/reveal.js#configuration
   Reveal.initialize({
-    //     height:'100%',
-    //     width:'100%',
+    height:800,
+    width:960,
+    margin: 0.1,
+    minScale: 0.2,
+    maxScale:1.5,
     // Display controls in the bottom right corner
     controls: true,
 
