--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <ol>
             <li class='fragment' align='left'>Anatomy & Physiology of the Brain</li>
             <li class='fragment' align='left'>The WLG Model</li>
-            <li class='fragment' align='left'>Measurement Tools</li>
+<!--             <li class='fragment' align='left'>Measurement Tools</li> -->
             <li class='fragment' align='left'>Modern Advances</li>
             <ol>
               <li class='fragment' align='left' type = 'a'>Classic Neuroimaging Studies</li>
@@ -619,10 +619,7 @@
 
 </section>
 
-
-
-
-<section>
+<!-- <section>
   <section><h2>Measurement Tools</h2></section>
   <section>We’ve come a long way…
 
@@ -653,9 +650,7 @@
 
     Web Source [4]</section>
 </section>
-
-
-
+ -->
 
 <section>
 
@@ -908,9 +903,9 @@
   </section>
 </section>
 
-<section>
+<section align='left'>
   <section>
-    <h2>References</h2>
+    <h2 align='middle'>References</h2>
   </section>
   <section>
     <small align='left'>Andoh, J., Artiges, E., Pallier, C., Riviиre, D., Mangin, J.-F., Paillиre-Martinot, M.-L. & Martinot, J.-L. (2008). Priming frequencies of transcranial magnetic stimulation over Wernicke's area modulate word detection.. Cerebral cortex (New York, N.Y. : 1991) 18 (1), 210--6.
